--- a/cfg/Tello.cfg
+++ b/cfg/Tello.cfg
@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 PACKAGE = "tello_driver"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
